added readme, author and detail of products in view

--- a/pom.xml
+++ b/pom.xml
@@ -81,5 +81,14 @@
 		</plugins>
 	</build>
 
+	<developers>
+		<developer>
+			<name>aakkus</name>
+			<roles>
+				<role>bla bla</role>
+			</roles>
+			<email>alican.akkus94@gmail.com</email>
+		</developer>
+	</developers>
 
 </project>
