added some props

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.data=classpath:db-init/products.sql
 
 #enabled hot changes
 spring.thymeleaf.cache=false
+
+#disabled security
+security.basic.enabled=false
+management.security.enabled=false
+
+#json pretty print
+spring.jackson.serialization.indent-output=true
